# anymal-api-tests

./: .env.example  .gitignore  ANYmal_API_Documentation.md  ANYmal_REST_API_Postman_Guide.md  Data_Navigator_API_Reference.md  EXTENDED_API_DISCOVERY_SUMMARY.md  FINAL_API_DISCOVERY_REPORT.md  README.md  USAGE_GUIDE.md  analyze_portal_network_calls.py  anymal_config.ini.example  anymal_config.json.example  api_discovery_results.json  config_example.py  data_navigator_api_report.txt  data_navigator_client.py  discover_data_navigator_api.py  discover_service_endpoints.py  discover_web_portal_apis.py  explore_elevated_access.py  inspect_portal_page.py  inspection_data_download_samples.py  mono16_conversion_guide.md  portal_network_analysis_results.json  quick_data_navigator_check.py  service_discovery_results.json  simple_download_example.py  test_successful_flow.py  thermal_json_converter.py  view_thermal_images.py
api_examples/anymal_api_cpp/: CMakeLists.txt  package.xml
api_examples/anymal_api_cpp/cmake/: grpc_protobuf_macros.cmake
api_examples/anymal_api_cpp/include/anymal_api_proto/: anymal_api_proto.hpp
api_examples/anymal_api_cpp/test/: TestGeneratedCode.cpp
api_examples/anymal_api_proto/: CMakeLists.txt  package.xml
api_examples/anymal_api_proto/cmake/: proto_sources.cmake
api_examples/anymal_api_proto/proto/anymal_api_proto/: assets.proto  common.proto  connection.proto  control.proto  environment.proto  error_state.proto  inspection.proto  introspection.proto  liveview.proto  mission.proto  mission_description.proto  navigation.proto  spatial.proto  state_estimation.proto  subscribe.proto  task.proto  user_notification.proto
api_examples/anymal_api_python/: CMakeLists.txt  (+2 more)
api_examples/anymal_sdk_python_example/: CMakeLists.txt  package.xml  setup.py
api_examples/anymal_sdk_python_example/docker/: Dockerfile  README.md  docker-compose.yml
api_examples/anymal_sdk_python_example/src/anymal_sdk_example/: __init__.py  anymal_example_handler.py  auditive_helpers.py  cli_helpers.py  config.py  example_helpers.py  image_helpers.py  spatial_helpers.py
environment_data/playground_data/: .gitattributes  CMakeLists.txt  LICENSE  metadata.yaml  package.xml
environment_data/playground_data/configs/: default.yaml
environment_data/playground_data/debian/: changelog  control
environment_data/playground_data/environments/: environment.yaml  playground.yaml
environment_data/playground_data/missions/: InspectFirstFloor.yaml  InspectMaze.yaml  InspectSecondFloor.yaml  NavigateThroughFirstFloor.yaml  VideoRecordingMission.yaml
environment_data/playground_data/missions/playground/: NavigateThroughGroundFloor.yaml
environment_data/playground_data/models/apriltag_0_size_18cm/: model.sdf
environment_data/playground_data/models/apriltag_0_size_18cm/meshes/: apriltag36_11_00000.dae  apriltag36_11_00001.dae  apriltag36_11_00002.dae  apriltag36_11_00003.dae  apriltag_0_size_18cm.dae
environment_data/playground_data/models/docking_station/: model.sdf
environment_data/playground_data/models/docking_station/meshes/: docking_port.dae
environment_data/playground_data/models/fire_extinguisher_1/: model.config  model.sdf
environment_data/playground_data/models/fire_extinguisher_1/meshes/: fire_extinguisher_1.dae
environment_data/playground_data/models/fire_extinguisher_2/: model.config  model.sdf
environment_data/playground_data/models/fire_extinguisher_2/meshes/: fire_extinguisher_2.dae
environment_data/playground_data/models/linear_gauge_1/: model.config  model.sdf
environment_data/playground_data/models/linear_gauge_1/meshes/: linear_gauge_1.dae
environment_data/playground_data/models/playground/: model.config  model.sdf
environment_data/playground_data/models/playground/meshes/: playground.stl  slippery_area.dae  slippery_areas.xcf  very_slippery_area.dae
environment_data/playground_data/models/pressure_gauge_12/: model.sdf
environment_data/playground_data/models/pressure_gauge_12/meshes/: pressure_gauge_12.dae
environment_data/playground_data/models/pressure_gauge_501/: model.sdf
environment_data/playground_data/models/pressure_gauge_501/meshes/: pressure_gauge_501.dae
environment_data/playground_data/models/round_gauge_1/: model.config  model.sdf
environment_data/playground_data/models/round_gauge_1/meshes/: round_gauge_1.dae
environment_data/playground_data/models/round_gauge_2/: model.config  model.sdf
environment_data/playground_data/models/round_gauge_2/meshes/: round_gauge_2.dae
environment_data/playground_data/models/safety_helmet_1/: model.config  model.sdf
environment_data/playground_data/models/safety_helmet_1/meshes/: safety_helmet_1.dae
environment_data/playground_data/models/square_gauge_1/: model.config  model.sdf
environment_data/playground_data/models/square_gauge_1/meshes/: square_gauge_1.dae
environment_data/playground_data/models/square_gauge_2/: model.config  model.sdf
environment_data/playground_data/waypoints/: playground.json  waypoints.json
environment_data/playground_data/worlds/: playground.world  world.world
inspection_examples/inspection_example_minimal_plugin/: CMakeLists.txt  package.xml
inspection_examples/inspection_example_msgs/: CMakeLists.txt  package.xml
inspection_examples/inspection_example_plugin/: CMakeLists.txt  package.xml
mission_task_examples/state_machine_example/: CMakeLists.txt  package.xml  state_machine_plugin.xml
mission_task_examples/state_machine_example/config/: ros.yaml
mission_task_examples/state_machine_example/include/state_machine_example/: CalculateFibonacciSeries.hpp  CalculateTwoFibonacciSeriesSequentially.hpp
mission_task_examples/state_machine_example/launch/: calculate_fibonacci_series.launch  load_ros_parameters.launch
mission_task_examples/state_machine_example/src/: calculate_fibonacci_series.cpp
mission_task_examples/state_machine_example/src/state_machine_example/: CalculateFibonacciSeries.cpp  CalculateTwoFibonacciSeriesSequentially.cpp  plugins.cpp
mission_task_examples/state_machine_example/test/: TestPlugins.cpp  main.cpp  ros.test
(+7 files in other folders)
