<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>anymal_sdk_python_example</name>
  <version>0.7.10</version>
  <description>Example package that illustrates how to use the ANYmal Python SDK.</description>
  <author email="ghottiger@anybotics.com">Gabriel Hottiger</author>

  <maintainer email="apoghosov@anybotics.com">Armen Poghosov</maintainer>
  <maintainer email="hwyss@anybotics.com">Hannes Wyss</maintainer>
  <maintainer email="jvelasco@anybotics.com">Javier De Velasco Oriol</maintainer>
  <maintainer email="ggiannakaras@anybotics.com">George Giannakaras</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python3.9</build_depend>

  <exec_depend>anymal_sdk_python</exec_depend>
  <exec_depend>anymal_sdk_python39_bindings</exec_depend>
  <exec_depend>anymal_sdk_python39_environment</exec_depend>
  <exec_depend>anymal_liveview_python_env</exec_depend>

</package>
