<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>inspection_example_msgs</name>
  <version>0.0.25</version>
  <description>ROS message definitions for example inspection.</description>
  <author email="sbachmann@anybotics.com">Samuel Bachmann</author>
  <maintainer email="sbachmann@anybotics.com">Samuel Bachmann</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <license>Proprietary</license>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <depend>actionlib_msgs</depend>
  <depend>environment_item_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
